# savage_metronome

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  windows.rc
.claude/agents/: code-reviewer.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml
assets/: savage_metronome.icns
doc/: architecture.md  coding_standards.md  context_transfer.md  current_focus.md  invariants.md  module_map.md  technical_decisions.md  vision.md
src/: lib.rs  main.rs
src/audio/: engine.rs  mock.rs  mod.rs  wav_loader.rs
src/config/: mod.rs  settings.rs
src/domain/: metronome.rs  mod.rs  tempo.rs  time_signature.rs
src/presets/: mod.rs  preset.rs  storage.rs
src/ui/: app.rs  events.rs  mod.rs
tests/: metronome_flow.rs  preset_integration.rs
