[package]
name = "metronome"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
rodio = { version = "0.17", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dev-dependencies]
tempfile = "3.10"
