[package]
name = "metronome"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
rodio = { version = "0.21.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"

[features]
default = ["audio"]
audio = ["dep:rodio"]

[dev-dependencies]
tempfile = "3.10"
