[package]
name = "metronome"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
rodio = { version = "0.21.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"

[features]
default = ["audio"]
audio = ["dep:rodio"]

[build-dependencies]
embed-resource = "2"

[dev-dependencies]
tempfile = "3.10"

[package.metadata.bundle]
name = "Savage Metronome"
identifier = "com.petri.savage-metronome"
icon = ["assets/savage_metronome.icns"]
version = "0.1.0"
copyright = "Copyright (c) 2025 petri"
category = "Music"
short_description = "A desktop metronome application"
